<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:id="@+id/cv_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rel_item_now_play"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="8dp">

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="150dp"
                android:layout_height="220dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tv_item_name"
                tools:text="@string/movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@id/img_item_photo"
                android:layout_toRightOf="@id/img_item_photo"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_item_overview"
                tools:text="@string/movie_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item_name"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@id/img_item_photo"
                android:layout_toRightOf="@id/img_item_photo"
                android:maxLines="5" />

            <TextView
                android:id="@+id/tv_item_date"
                tools:text="@string/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_toRightOf="@+id/img_item_photo"
                android:drawablePadding="3dp"
                android:gravity="center"
                android:maxLines="1" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <Button
                android:id="@+id/btn_set_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/favorite"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_set_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>