<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rl_item_row_movies">

    <ImageView
        android:id="@+id/imgMoviePict"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        tools:src="@mipmap/ic_launcher"
        />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imgMoviePict"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="18dp"
        android:textStyle="bold"
        android:textSize="16sp"
        tools:text="@string/judul"/>
    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imgMoviePict"
        android:layout_below="@id/tvTitle"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_centerVertical="true"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="16sp"
        tools:text="@string/deskripsi"/>

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imgMoviePict"
        android:layout_below="@id/tvDescription"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        tools:text="@string/tanggal"
        />


</RelativeLayout>